# asterisk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
asterisk/: Actor.cpp  Actor.h  CMakeLists.txt  Color.h  Game.cpp  Game.h  GameplayState.cpp  GameplayState.h  InputManager.cpp  InputManager.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Main.cpp  Physics2D.h  Player.cpp  Player.h  PlayerManager.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  State.cpp  State.h  Texture.cpp  Texture.h  Utility.h  Window.h  asterisk.cpp  asterisk.h
